some layout problem fixed, added .btn-blue class to CSS

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
 }
+.btn-blue{
+padding: 10px;
+color: white;
+background-color: rgb(71, 128, 226);
+}
 
 header {
   height: 50px;
@@ -57,20 +62,25 @@ li {
   align-items: center;
 }
 .big-container{
-  background-color: aqua;
+  background-color: rgb(135, 215, 247);
 }
 h1{
   color: black;
   text-align: center;
-  font-size: 80px;
+  font-size: 50px;
 }
 
 .text1{
-  flex-basis: 40%;
+  flex-basis: 20%;
   margin-bottom: 25px;
+  margin-left: 400px;
 }
 .jumboimage{
-  flex-basis: 60%;
+  flex-basis: 80%;
+  min-height: 300px;
+  background-image: url(./img/jumbo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 .MENU{
   background-color: white;
